## Changelog

## master

- Add: Non SSL support for mesos.

## v0.1.4

- Add: execute_config support. 

## v0.1.2

- Add: Documentation
- Change it to support python >= 3.6
- Update requirement in the setup.py
- Add: Suppress mesos framework offers if there are no tasks in the queue
- Add: support of custom docker environment (more details in the readme.md)
- Change: Mesos task name would be generated by Airflow dag_id, task_id and execution_date

## v0.1.1

- Add Mesos Executor
- Make container type configurable and add TTY for UCR container

## v0.1.0:
  Creation